# QuantumArtHack

./: BUGFIX: Different_sized_inputs.ipynb  BUGFIX: Wrong_color_parallel_QPIXL.ipynb  CODE_OF_CONDUCT.md  CONTRIBUTING.md  QPIXL_Flexible_Circuit_Integration_Demo.ipynb  QPIXL_decoherence_audio_fx.ipynb  QPIXL_decoherence_visual_fx.ipynb  QPIXL_demo.ipynb  QPIXL_demo_composer_extension_v4.ipynb  QPIXL_demo_qpixl-original.ipynb  README.md  art.ipynb  bugs.ipynb  fix_different_sized_inputs.ipynb  pyproject.toml
QPIXL/: audio_processor.py  helper.py  qpixl_integrator.py
QPIXL/CuQuantum/: param_qpixl_cuquantum.py  qpixl_cuquantum.py
QPIXL/pennylane/: param_qpixl.py  qpixl.py  qpixl_parallel.py
QPIXL/qiskit/: README(new).md  parallel_param_qpixl.py  param_qpixl.py  qpixl.py  qpixl_angs.py  qpixl_module.py  qpixl_parallel.py  quantum_composer.py
Sample_Material/underground/: underground_metadata_custom_algo_integrated_demo_c10.txt  underground_metadata_qft_integrated_demo_c10.txt  underground_metadata_sliced_qaoa_c30.txt  underground_metadata_sliced_qft_c30.txt
examples/: tom_cruise_vs_QFT.ipynb
